<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Text.Title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:text="@string/confirmation_code_title" />

        <TextView
            style="@style/Text.Section"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/confirmation_code_section_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/confirmation_code_hint"
            android:id="@+id/confirmation_cod_til_code"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Button.Action"
            android:id="@+id/confirmation_code_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/confirmation_code_button" />

        <TextView
            style="@style/Text.Section"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/confirmation_code_section_send" />

        <Button
            style="@style/Button.Secondary"
            android:id="@+id/confirmation_code_button_resend"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/confirmation_code_button_resend_code" />
    </LinearLayout>
</LinearLayout>