<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Text.Title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:text="@string/reset_password_title" />

        <TextView
            style="@style/Text.Section"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/reset_password_section" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/reset_password_hint_code"
            android:id="@+id/reset_password_til_code"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/reset_password_hint_password"
            android:id="@+id/reset_password_til_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Button.Action"
            android:id="@+id/reset_password_bt_change"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reset_password_button_change" />

        <TextView
            style="@style/Text.Section"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/reset_password_section_reset" />

        <Button
            style="@style/Button.Secondary"
            android:id="@+id/reset_password_bt_reset"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reset_password_button_request" />
    </LinearLayout>
</LinearLayout>