<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_with_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightest_grey"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_4"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/margin_4">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_til_email"
                    style="@style/Text.Login.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/login_til_password"
                    style="@style/Text.Login.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            style="@style/Text.Gray.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent"
            android:text="@string/login_message" />

        <Button
            android:id="@+id/login_button_login"
            style="@style/Button.Action.White.Login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/login_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_48"
            android:background="@color/white"
            android:orientation="vertical">

            <include
                android:id="@+id/login_button_reset_password"
                layout="@layout/row_button" />

            <include
                android:id="@+id/login_button_register"
                layout="@layout/row_button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/lightest_grey" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>